k8s-deployer/deploy/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-deployer
spec:
  selector:
    dixa-app: k8s-deployer
  ports:
    - port: 80
      targetPort: 8080
