k8s-deployer/deploy/kube/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: k8s-deployer
spec:
  host: k8s-deployer
