k8s-deployer/deploy/kube/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-deployer
spec:
  hosts:
  - k8s-deployer
  http:
  - route:
    - destination:
        host: k8s-deployer
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
    # fault:
    #   delay:
    #     percentage:
    #       value: 0.1
    #     fixedDelay: 2s
    #   abort:
    #     percentage:
    #       value: 0.1
    #     httpStatus: 500
